@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title= title
+    %title= page.title
   %body
     =yield
     %div#footer
